# users-events

./: Dockerfile  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml
src/: .env  .env.docker  main.py
src/apps/auth/: dependencies.py  routers.py  schemas.py  services.py
src/apps/consumers/: serve.py
src/apps/consumers/events/: handlers.py
src/apps/events/: dependencies.py  models.py  repoository.py  repository.py  routers.py  schemas.py  services.py
src/apps/users/: dependencies.py  models.py  repository.py  routers.py  schemas.py  services.py  tasks.py
src/broker/: schemas.py  serve.py
src/celery/: celery.py
src/migrations/: env.py
src/migrations/versions/: 785f201a65ec_add_table_users.py  8481b320f1f1_add_table_events.py
src/routers/: api_router.py
src/settings/: settings.py
src/utils/: database.py  dependencies.py  exceptions.py  pwd_utils.py  redis.py  token_utils.py
